@@ -80,7 +80,7 @@
 		</td>
 		<td style="text-align:right; white-space:nowrap">
 		    <roundcube:label name="editortype" />:&nbsp;
-		    <span class="radios-left"><roundcube:object name="editorSelector" tabindex="10" /></span>
+		    <span class="radios-left"><roundcube:object name="editorSelector" editorid="compose-body" tabindex="10" /></span>
 		</td>
 	    </tr>
 	</tbody></table>
