@@ -1,6 +1,11 @@
 CHANGELOG RoundCube Webmail
 ---------------------------
 
+2008/11/03 (alec)
+----------
+- Add warning when switching editor mode from html to plain (#1485488)
+- Unified editor switching functions
+
 2008/10/29 (alec)
 ----------
 - Fix problem with numeric folder names (#1485527)
